Fixed bug #45910 (Cannot declare self-referencing constant)